# trading-bot-execution

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
config/: default.toml
src/: bitget.rs  brain.rs  config_model.rs  error.rs  executor.rs  main.rs
